<resources>
    <string name="app_name">Edithor</string>
    <string name="add_fab_button">Add Fab Button</string>
    <string name="txt_notlarim">Notlarım</string>
    <string name="type_something">Bir şeyler yazın</string>
    <string name="save">Kaydet</string>
    <string name="title">Başlık</string>
    <string name="tekrar_hosgeldniz">Tekrar hoşgeldiniz.</string>
    <string name="e_mail_hint">E-Mail</string>
    <string name="sifre">Şifre</string>
    <string name="beni_hatirla">Beni hatırla</string>
    <string name="giris_yap">Giriş yap</string>
    <string name="ya_da">ya da</string>
    <string name="google_ile_giri_yap">Google ile giriş yap</string>
    <string name="edithor_kayit_olun">Edithor\'a \nkayıt olun.</string>
    <string name="ad_soyad">Ad-Soyad</string>
    <string name="kayit_ol">Kayıt ol</string>
    <string name="google_sign_button">google sign</string>
    <string name="upload_file">upload file</string>
    <string name="baslik">Başlık</string>
    <string name="chatgpt">ChatGPT</string>
    <string name="online">Çevrimiçi</string>
    <string name="edithor_a_sor">Edithor\'a sor</string>
    <string name="islemler">İşlemler</string>
    <string name="not_ekle">Not ekle</string>
    <string name="not_eklemek_icin_butona_tikla">Not eklemek için alttaki butona tıkla</string>
    <string name="hesabin_yok_mu">Hesabın yok mu?</string>
    <string name="not_rengine_gore_filtrele">Not rengine göre filtrele</string>
    <string name="bir_sey_sorun">Bir şey sorun</string>
    <string name="edithor_soruyu_bekliyor">Edithor soracağın soruyu bekliyor</string>
    <string name="edithor_ekleyecegin_fotografi_bekliyor">Edithor ekleyeceğin fotoğrafı bekliyor</string>
    <string name="fotograf_cek">Fotoğraf çek</string>
    <string name="galeriden_sec">Galeriden seç</string>
    <string name="ocr">OCR</string>
    <string name="pdf_e_aktar">PDF\'e aktar</string>
    <string name="oneriler">Öneriler</string>
    <string name="bana_gunun_sozunu_soyle">Bana günün sözünü söyle</string>
    <string name="bana_fikir_ver">Bana fikir ver</string>
    <string name="yabanc_dile_cevir">Yabancı dile çevir</string>
    <string name="baska_bir_sey_istiyorum">Başka bir şey istiyorum</string>
    <string name="edithor_a_sorarak_cesitli_konularda_yazilari_notlariniza_ekleyebilirsiniz">*Edithor\'a sorarak çeşitli konularda yazıları notlarınıza ekleyebilirsiniz.</string>
    <string name="sil">Sil</string>
    <string name="kopyala">Kopyala</string>
    <string name="paylas">Paylaş</string>
    <string name="edithor_gunun_sozunu_soyluyor">Edithor günün sözünü söylüyor...</string>
    <string name="gunun_sozu">Günün sözü</string>
    <string name="bana_hobi_fikri_ver">Bana bir adet hobi fikri ver</string>
    <string name="ngilizce">İngilizce</string>
    <string name="turkce">Türkçe</string>
    <string name="edithor_cevirilecek_yaziyi_bekliyor">Edithor çevirilecek yazıyı bekliyor...</string>
    <string name="yukarida_bulunan_ingilizce_ve_turkce_alanlarina_veri_girisi_yaparak_ceviriyi_elde_edebilirsiniz">*Yukarıda bulunan İngilizce ve Türkçe alanlarına veri girişi yaparak çeviriyi elde edebilirsiniz.</string>
    <string name="ingilizceiseturkceye_turkceiseingilizceyecevir">Yazacağım ifade eğer İngilizce ise Türkçeye, Türkçe ise İngilizceye çevir : </string>
    <string name="fikir_makinesi">Fikir Makinesi</string>
    <string name="edithor_fikir_dusunuyor">Edithor bir fikir düşünüyor...</string>
    <string name="edithor_dusunuyor">Edithor düşünüyor...</string>
    <string name="edithor_gunun_sozunu_dusunuyor">Edithor günün sözünü düşünüyor...</string>
    <string name="edithor_ceviriyi_yapiyor">Edithor çeviriyi yapıyor...</string>
    <string name="ingilizce_turkce_ceviri">İngilizce - Türkçe Çeviri</string>
    <string name="cevir">Çevir</string>
    <string name="yukarida_bulunan_cevir_alanina_cevirilecek_ifadeyi_girin">*Yukarıda bulunan Çevir alanına çevirilecek ifadeyi girin.</string>
    <string name="Ocak">Ocak</string>
    <string name="Subat">Şubat</string>
    <string name="Mayis">Mayıs</string>
    <string name="Mart">Mart</string>
    <string name="Nisan">Nisan</string>
    <string name="Haziran">Haziran</string>
    <string name="Temmuz">Temmuz</string>
    <string name="Agustos">Ağustos</string>
    <string name="Eylul">Eylül</string>
    <string name="Ekim">Ekim</string>
    <string name="Kasim">Kasım</string>
    <string name="Aralik">Aralık</string>
    <string name="btn_toolbar_share">btn_toolbar_share</string>
</resources>