<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:id="@+id/takePhotoToolbar"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:padding="8dp"
            app:tint="@color/md_theme_light_primary"
            android:src="@drawable/ic_take_picture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/inter_medium"
            android:text="@string/fotograf_cek"
            android:layout_marginHorizontal="15dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/choosePhotoToolbar"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:padding="8dp"
            app:tint="@color/md_theme_light_primary"
            android:src="@drawable/ic_galeri"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/inter_medium"
            android:text="@string/galeriden_sec"
            android:layout_marginHorizontal="15dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_ocr_toolbar"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_bottom_sheet_ocr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:padding="8dp"
            app:tint="@color/md_theme_light_primary"
            android:src="@drawable/ic_ocr" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/inter_medium"
            android:text="@string/ocr"
            android:layout_marginHorizontal="15dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_pdf_toolbar"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_bottom_sheet_bot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:src="@drawable/ic_pdf"
            app:tint="@color/md_theme_light_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/inter_medium"
            android:text="@string/pdf_e_aktar"
            android:layout_marginHorizontal="15dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
