<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/bottom_sheet_delete_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_bottom_sheet_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:src="@drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/sil"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/properties_copy_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_bottom_sheet_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:src="@drawable/ic_copy_link" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/kopyala"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareNoteToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_bottom_sheet_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:src="@drawable/ic_share"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/paylas"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>
