<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="10dp"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:src="@drawable/ic_ai"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvOzellikAdi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingilizce_turkce_ceviri"
                android:fontFamily="@font/inter_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageButton2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/sendMessageGPTDialogTranslate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:src="@drawable/ic_send"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>



        <LinearLayout
            android:id="@+id/bottom_sheet_question_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">


            <EditText
                android:id="@+id/txtChatTranslate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:foreground="@drawable/custom_foreground"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/cevir"
                android:inputType="textMultiLine"
                android:alpha="0.5"
                android:minHeight="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvChatGPTResponseTranslate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter_regular"
                android:minHeight="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/edithor_cevirilecek_yaziyi_bekliyor"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:alpha="0.5"
                />

        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/inter_light"
            android:layout_marginTop="10dp"
            android:text="@string/yukarida_bulunan_cevir_alanina_cevirilecek_ifadeyi_girin"
            android:padding="8dp"
            android:alpha="0.8"
            android:textSize="11sp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.cardview.widget.CardView>