<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_light"
    android:paddingHorizontal="20dp">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/edithor_kayit_olun"
        android:textColor="@color/bg_color_dark"
        android:textSize="@dimen/_40ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.5"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnKayitOl"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/adWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtKayitAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/cardview_color"
                android:hint="@string/ad_soyad"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/input_text_color"
                android:textColorHint="@color/cardview_date_color" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/adWrapper"
            android:layout_centerHorizontal="true"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtKayitEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/cardview_color"
                android:hint="@string/e_mail_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/input_text_color"
                android:textColorHint="@color/cardview_date_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kayitSifreWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailWrapper"
            android:backgroundTint="@color/cardview_color"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtKayitSifre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/cardview_color"
                android:hint="@string/sifre"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/input_text_color"
                android:textColorHint="@color/cardview_date_color" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>


    <!-- Buttons -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnKayitOl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/kayit_ol"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/button_active_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pBar"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btnKayitOl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>